# DirectFB2

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Kconfig  Make.defs  Makefile  NEWS  README  README.md  defconfig  dfb-update-pkgconfig.in  meson.build  meson_options.txt  meson_symlink.sh
include/: dfb_types.h  dfiff.h  dfvff.h  dgiff.h  directfb.h  directfb_keyboard.h  directfb_util.h  directfb_windows.h  directfbgl.h  gen_directfb_keynames.sh  gen_directfb_strings.sh  meson.build
inputdrivers/linux_input/: linux_input.c  meson.build
inputdrivers/nuttx_input/: nuttx_input.c
interfaces/ICoreResourceManager/: icoreresourcemanager_default.c  meson.build
interfaces/IDirectFBFont/: idirectfbfont_dgiff.c  meson.build
interfaces/IDirectFBImageProvider/: idirectfbimageprovider_dfiff.c  meson.build
interfaces/IDirectFBVideoProvider/: idirectfbvideoprovider_dfvff.c  meson.build
interfaces/IDirectFBWindows/: idirectfbwindows_default.c  meson.build
lib/direct/: atomic.h  clock.c  clock.h  compiler.h  conf.c  conf.h  debug.c  debug.h  direct.c  direct.h  direct_result.c  direct_result.h  filesystem.h  hash.c  hash.h  init.c  interface.c  interface.h  interface_implementation.h  list.h  log.c  log.h  log_domain.c  log_domain.h  map.c  map.h  mem.c  mem.h  memcpy.c  memcpy.h  meson.build  messages.c  messages.h  modules.c  modules.h  mutex.h  result.c  result.h  serial.h  signals.c  (+14 more)
lib/direct/os/: clock.h  filesystem.h  log.h  mem.h  mutex.h  signals.h  system.h  thread.h  types.h  waitqueue.h
lib/direct/os/linux/: clock.c  filesystem.c  filesystem.h  log.c  mutex.c  mutex.h  signals.c  system.c  thread.c  thread.h  types.h  waitqueue.h
lib/direct/os/nuttx/: clock.c  filesystem.h  log.c  mem.c  mutex.h  signals.c  system.c  thread.c  thread.h  types.h  waitqueue.h
lib/direct/os/nuttx/configs/sim/: defconfig
lib/direct/os/nuttx/configs/stm32f429i-disco/: defconfig
lib/fusion/: arena.c  arena.h  call.c  call.h  conf.c  conf.h  fusion.c  fusion.h  fusion_internal.h  hash.c  hash.h  init.c  lock.c  lock.h  meson.build  object.c  object.h  protocol.h  reactor.c  reactor.h  ref.c  ref.h  shmalloc.c  shmalloc.h  types.h  vector.c  vector.h
lib/fusion/shm/: fake.c  heap.c  pool.c  pool.h  shm.c  shm.h  shm_internal.h
src/: directfb.c  directfb_result.c  directfb_result.h  idirectfb.c  idirectfb.h  init.c  meson.build
src/core/: CoreDFB.flux  CoreDFB_CallMode.h  CoreDFB_includes.h  CoreDFB_real.c  CoreGraphicsState.flux  CoreGraphicsStateClient.c  CoreGraphicsStateClient.h  CoreGraphicsState_includes.h  CoreGraphicsState_real.c  CoreInputDevice.flux  CoreInputDevice_includes.h  CoreInputDevice_real.c  CoreLayer.flux  CoreLayerContext.flux  CoreLayerContext_includes.h  CoreLayerContext_real.c  CoreLayerRegion.flux  CoreLayerRegion_includes.h  CoreLayerRegion_real.c  CoreLayer_includes.h  CoreLayer_real.c  CorePalette.flux  CorePalette_includes.h  CorePalette_real.c  CoreScreen.flux  CoreScreen_includes.h  CoreScreen_real.c  CoreSlave.flux  CoreSlave_includes.h  CoreSlave_real.c  CoreSurface.flux  CoreSurfaceAllocation.flux  CoreSurfaceAllocation_includes.h  CoreSurfaceAllocation_real.c  CoreSurfaceClient.flux  CoreSurfaceClient_includes.h  CoreSurfaceClient_real.c  CoreSurface_includes.h  CoreSurface_real.c  CoreWindow.flux  (+75 more)
src/display/: idirectfbdisplaylayer.c  idirectfbdisplaylayer.h  idirectfbpalette.c  idirectfbpalette.h  idirectfbscreen.c  idirectfbscreen.h  idirectfbsurface.c  idirectfbsurface.h  idirectfbsurface_layer.c  idirectfbsurface_layer.h  idirectfbsurface_window.c  idirectfbsurface_window.h  idirectfbsurfaceallocation.c  idirectfbsurfaceallocation.h
src/gfx/: clip.c  clip.h  convert.c  convert.h  util.c  util.h
src/gfx/generic/: duffs_device.h  generic.c  generic.h  generic_64.h  generic_blit.c  generic_blit.h  generic_draw_line.c  generic_draw_line.h  generic_fill_rectangle.c  generic_fill_rectangle.h  generic_mmx.h  generic_neon.h  generic_stretch_blit.c  generic_stretch_blit.h  generic_texture_triangles.c  generic_texture_triangles.h  generic_util.c  generic_util.h  stretch_hvx_16.h  stretch_hvx_32.h  stretch_hvx_8.h  stretch_hvx_88.h  stretch_hvx_N.h  stretch_up_down_16.h  stretch_up_down_32.h  stretch_up_down_8.h  stretch_up_down_88.h  stretch_up_down_table.h  template_acc_16.h  template_acc_24.h  template_acc_32.h  template_colorkey_16.h  template_colorkey_24.h  template_colorkey_32.h
src/input/: idirectfbeventbuffer.c  idirectfbeventbuffer.h  idirectfbinputdevice.c  idirectfbinputdevice.h
src/media/: idirectfbdatabuffer.c  idirectfbdatabuffer.h  idirectfbdatabuffer_file.c  idirectfbdatabuffer_file.h  idirectfbdatabuffer_memory.c  idirectfbdatabuffer_memory.h  idirectfbdatabuffer_streamed.c  idirectfbdatabuffer_streamed.h  idirectfbfont.c  idirectfbfont.h  idirectfbimageprovider.c  idirectfbimageprovider.h  idirectfbvideoprovider.c  idirectfbvideoprovider.h
src/misc/: conf.c  conf.h  gfx_util.c  gfx_util.h  util.c
src/windows/: idirectfbwindow.c  idirectfbwindow.h
systems/drmkms/: drmkms_layer.c  drmkms_mode.c  drmkms_mode.h  drmkms_screen.c  drmkms_surface_pool.c  drmkms_system.c  drmkms_system.h  drmkms_vt.c  drmkms_vt.h  meson.build
systems/dummy/: dummy.c  meson.build
systems/fbdev/: fbdev_layer.c  fbdev_mode.c  fbdev_mode.h  fbdev_screen.c  fbdev_surface_pool.c  fbdev_surfacemanager.c  fbdev_surfacemanager.h  fbdev_system.c  fbdev_system.h  fbdev_vt.c  fbdev_vt.h  meson.build
systems/nuttxfb/: nuttxfb_layer.c  nuttxfb_screen.c  nuttxfb_surface_pool.c  nuttxfb_system.c  nuttxfb_system.h
tools/: dfbg.c  dfbinfo.c  dfiffinfo.c  meson.build
wm/default/: default.c  meson.build
